--- a/src/client/src/assets/css/login.css
+++ b/src/client/src/assets/css/login.css
@@ -65,6 +65,13 @@ a:hover {
   color: #eee;
 }
 
+a:hover, 
+a:visited, 
+a:link, 
+a:active{
+  text-decoration: none !important;
+}
+
 input {
   background-image: none;
   border: 0;
